-- dodalem adapter do gsona dla bike -- dodalem testy dla redisowego repozytorium -- poprzenosilem niektore pliki do innych folderow -- usunalem wszedzie getFirst bo nagle nie dziala -- probowalem zrobic poprawnie testy benchmarkowe ale to nie chce zadzialac dobrze i wychodzi ze bez cache jest szybciej xd