@@ -84,8 +84,8 @@ class BikeRepositoryOneNodeMissingTest {
         assertEquals(3, bikeRepository.bikeCollection.countDocuments());
         List<BikeMgd> testList = bikeRepository.findAll();
         assertEquals(3,testList.size());
-        assertEquals(testList.getFirst().getModelName(),bikeMgd1.getModelName());
-        assertEquals(testList.getFirst().getEntityId().getUuid(),bikeMgd1.getEntityId().getUuid());
+        assertEquals(testList.get(0).getModelName(),bikeMgd1.getModelName());
+        assertEquals(testList.get(0).getEntityId().getUuid(),bikeMgd1.getEntityId().getUuid());
         assertEquals(testList.get(1).getModelName(),bikeMgd2.getModelName());
         assertEquals(testList.get(1).getEntityId().getUuid(),bikeMgd2.getEntityId().getUuid());
         assertEquals(testList.get(2).getModelName(),bikeMgd3.getModelName());
@@ -106,7 +106,7 @@ class BikeRepositoryOneNodeMissingTest {
         assertEquals(2, bikeRepository.bikeCollection.countDocuments());
         List<BikeMgd> testList = bikeRepository.findAllAvailable();
         assertEquals(1,testList.size());
-        assertEquals(mountainBikeMgd.getEntityId().getUuid(),testList.getFirst().getEntityId().getUuid());
+        assertEquals(mountainBikeMgd.getEntityId().getUuid(),testList.get(0).getEntityId().getUuid());
     }
 
     @Test
@@ -117,7 +117,7 @@ class BikeRepositoryOneNodeMissingTest {
         assertEquals(0, bikeRepository.bikeCollection.countDocuments());
         bikeRepository.save(bikeMgd);
         assertEquals(1, bikeRepository.bikeCollection.countDocuments());
-        assertEquals(bikeMgd.getEntityId().getUuid(), bikeRepository.findAll().getFirst().getEntityId().getUuid());
+        assertEquals(bikeMgd.getEntityId().getUuid(), bikeRepository.findAll().get(0).getEntityId().getUuid());
     }
 
     @Test
@@ -133,7 +133,7 @@ class BikeRepositoryOneNodeMissingTest {
         bikeRepository.delete(mountainBikeMgd);
         String bikeId = mtb2.getBikeId();
         assertNull(bikeRepository.findById(bikeId));
-        assertEquals(electricBikeMgd.getEntityId().getUuid(), bikeRepository.findAll().getFirst().getEntityId().getUuid());
+        assertEquals(electricBikeMgd.getEntityId().getUuid(), bikeRepository.findAll().get(0).getEntityId().getUuid());
     }
 
     @Test
